maes solteiras a 2 km de voce

--- a/PaginaInicial.html
+++ b/PaginaInicial.html
@@ -1,12 +1,34 @@
 <html>
+<head>
 
     <title>
         Aula PI Projeto Integrador
     
     </title>
+</head>
+
     <body>
-        
+        <h1>oi</h1>
+<h2>pra</h2>
+<h3>vcs</h3>
+<h4>lindos</h4>
+<h5>gostosos</h5>
+<h6>maravilhosos</h6>
+<p>Meu primeiro sla</p>
+<img src="anao.jfif" alt="gaules rebaixado dançando">   
+<img src="outroanao.jfif" alt="outroanao">
+<img src="aifolou.jfif" alt="aifolou">
+<img src="aafe.jfif" alt="sla">
+<img src="bagriel.jfif" alt="geibriel">
+<img src="monica.jfif" alt="monica">
+<img src="fof.jfif" alt="fof">
+<img src="taputin.jfif" alt="rebaixado">
+
+
 
     </body>
 
-</html>
+
+
+
+</html> 
