--- a/PaginaInicial.html
+++ b/PaginaInicial.html
@@ -23,7 +23,9 @@
 <img src="monica.jfif" alt="monica">
 <img src="fof.jfif" alt="fof">
 <img src="taputin.jfif" alt="rebaixado">
-
+<video src="ISH DINERO.mp4"></video>
+<video src="videoplayback.mp4"></video>
+<video src="titio.mp4"></video>
 
 
     </body>
