--- a/PaginaInicial.html
+++ b/PaginaInicial.html
@@ -15,7 +15,7 @@
 <h5>gostosos</h5>
 <h6>maravilhosos</h6>
 <p>Meu primeiro sla</p>
-<img src="anao.jfif" alt="gaules rebaixado dançando">   
+<img src="anao.jfif" alt="gaules rebaixado dançando" width="500" height="333">   
 <img src="outroanao.jfif" alt="outroanao">
 <img src="aifolou.jfif" alt="aifolou">
 <img src="aafe.jfif" alt="sla">
