--- a/PaginaInicial.html
+++ b/PaginaInicial.html
@@ -23,7 +23,8 @@
 <img src="monica.jfif" alt="monica">
 <img src="fof.jfif" alt="fof">
 <img src="taputin.jfif" alt="rebaixado">
-<video src="ISH DINERO.mp4"></video>
+<video width="320" height="240" controls>
+    <source src="ISH DINERO.mp4" type="video/mp4">
 <video src="videoplayback.mp4"></video>
 <video src="titio.mp4"></video>
 
